--- a/action.yml
+++ b/action.yml
@@ -16,6 +16,9 @@ inputs:
   environment-type-override:
     description: 'A container type for this build that overrides the one specified in the build project.'
     required: false
+  commit-hash-to-override:
+    description: 'A commit hash, will be passed to the eventSourceVersion parameter.'
+    required: false
   image-override:
     description: 'The name of an image for this build that overrides the one specified in the build project.'
     required: false
